@@ -1,6 +1,13 @@
 version 1.4
 	* Fixed a bug that sometimes resulted in a
 	  StringIndexOutOfBoundsException when running cobertura-report
+	  (Thanks to Grzegorz Lukasik)
+	* Fixed a bug where classes without coverage data ("N/A") were
+	  not always sorted correctly in the HTML report (Thanks to
+	  Olivier Parent)
+	* Fixed a bug where the code complexity column would not always
+	  sort correctly in locales that use a comma to split the decimal
+	  part of the number (Thanks to Oliver Parent)
 
 version 1.3
 	* Increased speed of HTML reports by filtering the files read
